--- a/META.yml
+++ b/META.yml
@@ -5,9 +5,9 @@ author:
 build_requires:
   Test::More: 0.88
 configure_requires:
-  Module::Build::Tiny: 0.021
+  Module::Build::Tiny: 0.030
 dynamic_config: 0
-generated_by: 'Dist::Milla version v1.0.2, Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.131490'
+generated_by: 'Dist::Milla version v1.0.4, Dist::Zilla version 5.008, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -29,6 +29,7 @@ resources:
   bugtracker: https://github.com/hayajo/Mojolicious-Plugin-AccessControl/issues
   homepage: https://github.com/hayajo/Mojolicious-Plugin-AccessControl
   repository: https://github.com/hayajo/Mojolicious-Plugin-AccessControl.git
-version: 0.03
+version: 0.04
 x_contributors:
+  - 'Oliver Guenther <mail@oliverguenther.de>'
   - 'hayato imai <hayato.imai@gmail.com>'
